v0.13	2018 May
====
* adding symbols to PhysicalConstants.xml definition file

v0.12	2017 Sep
====
* Fixed MASS_HYDROGEN
* added warning for undefined constants in precision
* removed alternateNames from :long export tag

v0.11	2017 May
=====
* Fixed precision() 

* Added the following constants for compatability with Astro::Cosmology

Added
-----

FOUR_PI 	- 4 * PI
STERADIAN	- solid angle subtended by the radius squared in square degrees

Deprecated
----------

HUBBLE_TIME	- should move to Astro::Cosmology as it's not really constant


v0.10	2016 Feb
=====
A couple of interface-breaking changes:
* 'list_constants' and 'describe_constant' have been removed and
	people are directed to the docs, 'perldoc Astro::Constants'
* 'precision' is broken at the moment and will be fixed in the next version

These changes are enhancements/improvements:
* Short name constants are now *actually* constant and cannot be assigned to
* Values are now stored in an XML file, PhysicalConstants.xml
* Values have been updated using NIST's CODATA 2014 and the IAU 2009/2012
	System of Astronomical Constants
* Long names have an added alternate name to facilitate migrating from
	adjective_noun to noun_adjective.


List of name changes
====================
New names have replaced the old names which are retained in the file using 
the <alternateName> tag

old					new
===					===
LIGHT_SPEED			SPEED_LIGHT
ELECTRON_CHARGE 	CHARGE_ELEMENTARY
A_RAD				DENSITY_RADIATION
VACUUM_IMPEDANCE	IMPEDANCE_VACUUM
HBAR				H_BAR
ELECTRON_MASS		MASS_ELECTRON
PROTON_MASS			MASS_PROTON
NEUTRON_MASS		MASS_NEUTRON
HYDROGEN_MASS		MASS_HYDROGEN
SOLAR_MASS			MASS_SOLAR
SOLAR_RADIUS		RADIUS_SOLAR
SOLAR_LUMINOSITY	LUMINOSITY_SOLAR
EARTH_MASS			MASS_EARTH
EARTH_RADIUS		RADIUS_EARTH
RHO_C				DENSITY_CRITICAL_RHOc
EARTH_MASS			MASS_EARTH
EARTH_RADIUS		RADIUS_EARTH
THOMSON_XSECTION	THOMSON_CROSS_SECTION
ELECTRON_RADIUS		RADIUS_ELECTRON
BOHR_RADIUS			RADIUS_BOHR
SOLAR_TEMPERATURE	TEMPERATURE_SOLAR_SURFACE